--- a/public/main.css
+++ b/public/main.css
@@ -6,16 +6,6 @@ body
     margin: 0;
 }
 
-.wrap
-{
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
-    position: absolute;
-    top: 160;
-    left: 0;
-    z-index: 99;
-}
 
 .titletext
 {
@@ -34,6 +24,15 @@ body
 {
     font-size: 40px;
 }
+@media screen and (max-width: 800px){
+    .titletext
+    {
+        font-size:55px;
+    }
+
+
+}
+
 
 
 .background-image-overlay {
